gitops/espresso/apps/media/feishin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feishin
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feishin
  template:
    metadata:
      labels:
        app: feishin
    spec:
      nodeSelector:
        kubernetes.io/hostname: espresso-1
      containers:
        - name: feishin
          image: ghcr.io/jeffvli/feishin:1.17.0@sha256:5d92e57de28e7ca75ac79319a74c7fedcb84a8844a837343207a04d01e0cd336
          ports:
            - containerPort: 9180
              name: http
          startupProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
