gitops/espresso/apps/media/jellyseerr-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyseerr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  serviceName: jellyseerr-internal
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      nodeSelector:
        kubernetes.io/hostname: espresso-1
      securityContext:
        fsGroup: 1000
      containers:
        - name: seerr
          image: ghcr.io/seerr-team/seerr:v3.2.0@sha256:c4cbd5121236ac2f70a843a0b920b68a27976be57917555f1c45b08a1e6b2aad
          ports:
            - containerPort: 5055
              name: http
          startupProbe:
            httpGet:
              path: /api/v1/status
              port: http
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /api/v1/status
              port: http
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: http
            periodSeconds: 10
          volumeMounts:
            - mountPath: /app/config
              name: config
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
        storageClassName: nvme-ha
