gitops/espresso/apps/media/lidarr-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lidarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  serviceName: lidarr-internal
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: espresso-1
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:3.1.0.4875-ls23@sha256:dc03c122899c9ffda8a7f2dded803701491b6040e6842329281a44c6a6c298db
          ports:
            - containerPort: 8686
              name: http
          startupProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: media-data
      volumes:
        - name: media-data
          persistentVolumeClaim:
            claimName: media-data
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
        storageClassName: nvme-ha
