gitops/espresso/apps/media/musicgrabber-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: musicgrabber
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: musicgrabber
  serviceName: musicgrabber-internal
  template:
    metadata:
      labels:
        app: musicgrabber
    spec:
      nodeSelector:
        kubernetes.io/hostname: espresso-1
      containers:
        - name: musicgrabber
          image: g33kphr33k/musicgrabber:latest@sha256:76509d111ddd1861e76b486f5945d1c97fc2a75a57491a03b08c975650c82bc7
          ports:
            - containerPort: 8080
              name: http
          startupProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          volumeMounts:
            - mountPath: /data
              name: config
            - mountPath: /music
              name: media-data
              subPath: media/music
            - mountPath: /dev/shm
              name: shm
      volumes:
        - name: media-data
          persistentVolumeClaim:
            claimName: media-data
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: 2Gi
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
        storageClassName: openebs-hostpath
