gitops/espresso/apps/media/navidrome-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: navidrome
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  serviceName: navidrome-internal
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      nodeSelector:
        kubernetes.io/hostname: espresso-1
      containers:
        - name: navidrome
          image: ghcr.io/navidrome/navidrome:0.64.2@sha256:38dc2727bfcfd5ede290f8ada114fc90368146f265ae4701ddddbcbe2a44ee52
          ports:
            - containerPort: 4533
              name: http
          startupProbe:
            httpGet:
              path: /ping
              port: http
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            periodSeconds: 10
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /music
              name: media-data
              subPath: media/music
      volumes:
        - name: media-data
          persistentVolumeClaim:
            claimName: media-data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
        storageClassName: nvme-ha
