gitops/espresso/apps/media/seerr-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: seerr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seerr
  serviceName: seerr-internal
  template:
    metadata:
      annotations:
        secret.reloader.stakater.com/reload: seerr-api
      labels:
        app: seerr
    spec:
      nodeSelector:
        kubernetes.io/hostname: espresso-1
      securityContext:
        fsGroup: 1000
      containers:
        - name: seerr
          image: ghcr.io/seerr-team/seerr:v3.4.1@sha256:f4768de5f616248d723e05891f3345a1402123775d03bf0890dbfedc0831bda1
          ports:
            - containerPort: 5055
              name: http
          startupProbe:
            httpGet:
              path: /api/v1/status
              port: http
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /api/v1/status
              port: http
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: http
            periodSeconds: 10
          volumeMounts:
            - mountPath: /app/config
              name: config
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
        storageClassName: nvme-ha
