gitops/espresso/apps/media/network-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: transmission-vpn-only
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app: transmission
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "51820"
              protocol: UDP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: media
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "9091"
              protocol: TCP
    - fromCIDR:
        - 10.0.186.0/24
        - fd7a:115c:a1e0:186::/64
        - 10.0.187.0/24
        - fd7a:115c:a1e0:187::/64
      toPorts:
        - ports:
            - port: "9091"
              protocol: TCP
