gitops/espresso/apps/media/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: media
  namespace: media
spec:
  endpointSelector: {}
  ingress:
    # Kubelet HTTP probes and node-forwarded LB traffic
    - fromEntities:
        - host
        - remote-node
    # Gateway API traffic (internal gateway)
    - fromEntities:
        - ingress
    # LAN and VPN direct access to LB VIPs
    - fromCIDR:
        - 10.0.186.0/24
        - fd7a:115c:a1e0:186::/64
        - 10.0.187.0/24
        - fd7a:115c:a1e0:187::/64
        - 100.102.0.0/16
    # Intra-namespace (arr stack intercommunication)
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: media
    # Uptime-kuma monitoring
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: uptime-kuma
            k8s:app: uptime-kuma
      toPorts:
        - ports:
            - port: "9091"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    # Intra-namespace
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: media
    # World access: arr metadata, transmission VPN (WireGuard + DoT)
    - toEntities:
        - world
